--- a/makefile.ver
+++ b/makefile.ver
@@ -81,7 +81,10 @@ $(VERSION_DATA_FILE): | $(WORKDIR)/.
 
 # update public headers in release directory with actual version data
 update_headers_version:
+    ifdef (${OS_is_fbsd})
+       #define FREEBSD_SED_PATCH '""'
+    endif
 	@file=$(RELEASEDIR.include)/services/library_version_info.h && mark="#define __INTEL_DAAL" && \
-	sed $(sed.-b) $(sed.-i) -e "s/_DAAL_BUILD_DATE.*/_DAAL_BUILD_DATE $(BUILD)$(sed.eol)/" \
+	sed $(sed.-b) $(sed.-i $${FREEBSD_SED_PATCH}) -e "s/_DAAL_BUILD_DATE.*/_DAAL_BUILD_DATE $(BUILD)$(sed.eol)/" \
 		-e "s/\($${mark}__\).*/\1 $(MAJOR)$(sed.eol)/;s/\($${mark}_MINOR__\).*/\1 $(MINOR)$(sed.eol)/" \
 		-e "s/\($${mark}_UPDATE__\).*/\1 $(UPDATE)$(sed.eol)/" $$file
